# RideSyncEmbedded

./: README.md  curr_meas_dc_v1.asc
Datasheets/: Components.txt  TEGs(2).docx
KiCAD/LoadSwitchComparison/: LoadSwitchComparison_SiP+TLV+Logic.kicad_prl  LoadSwitchComparison_SiP+TLV+Logic.kicad_pro  LoadSwitchComparison_SiP+TLV+Logic.kicad_sch  LoadSwitchComparison_SiP+TLV.kicad_prl  LoadSwitchComparison_SiP+TLV.kicad_pro  LoadSwitchComparison_SiP+TLV.kicad_sch
KiCAD/RideSyncEmbedded_0.0/: RideSyncEmbedded_0.0.kicad_sch
KiCAD/RideSyncEmbedded_1.0/: #auto_saved_files#  RideSyncEmbedded_0.0.kicad_prl  RideSyncEmbedded_0.0.kicad_pro  RideSyncEmbedded_1.0.kicad_sch  RideSyncEmbedded_1.1.kicad_prl  RideSyncEmbedded_1.1.kicad_pro  RideSyncEmbedded_1.1.kicad_sch  RideSyncEmbedded_1.2.kicad_pro  RideSyncEmbedded_1.2.kicad_sch  RideSyncEmbedded_1.3.kicad_prl  RideSyncEmbedded_1.3.kicad_pro  RideSyncEmbedded_1.3.kicad_sch  ~RideSyncEmbedded_1.0.kicad_sch.lck
Load switch test/: CSV.m  GraficoConsumi.m
Load switch test/Test SIP+TLV/: 20250918-0002.psdata
Load switch test/Test TLV/: 20250918-falling_focus(1us_div).csv  20250918-noise_HLH.csv  20250918-noise_LHL.csv  20250918-rising_focus(10us_div).csv  20250918-rising_focus(1us_div).csv  fallingTLV_focus.fig  noiseHLH.fig  noiseLHL.fig  risingTLV_focus.fig
tegc-main/: .gitignore  .gitmodules  README.md  step_response.csv
tegc-main/app/: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
tegc-main/app/core/: CMakeLists.txt
tegc-main/app/core/executables/app/: main.cpp  main.hpp
tegc-main/app/core/src/errors/: error.cpp  error.hpp
tegc-main/app/core/src/modals/: serial_port_modal.cpp  serial_port_modal.hpp
tegc-main/app/core/src/serial/: serial.cpp  serial.hpp
tegc-main/app/core/src/tabs/: tab.hpp  tab_serial_port_manager.cpp  tab_serial_port_manager.hpp
tegc-main/app/core/src/utils/: shared_data.cpp  shared_data.hpp  utils.cpp  utils.hpp
tegc-main/app/core/src/window/: window.cpp  window.hpp
tegc-main/matlab/: README.md  (+5 more)
(+158 files in other folders)
